Make navbar visible in quotes page and make label readable. Also fixed hrefs in navbar.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,6 +3,10 @@ body {
   background-color: black;
 }
 
+label{
+  color:white;
+}
+
 #yuta {
   position: absolute;
   top: 80%;
